downgrade video quality

--- a/click2grasp/index.html
+++ b/click2grasp/index.html
@@ -164,7 +164,7 @@
         <div class="container">
           <div class="columns is-vcentered  is-centered">
             <video id="teaser" autoplay muted loop height="70%" width="70%">
-              <source src="media/videos/c2g.mp4"
+              <source src="media/videos/c2g_comp.mp4"
                       type="video/mp4">
             </video>
             </br>
@@ -189,21 +189,21 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/left/toys_brownie_15_left.mp4"
+            <source src="media/videos/robot/toys/left/toys_brownie_15_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
 
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/left/toys_dolly_16_left.mp4"
+            <source src="media/videos/robot/toys/left/toys_dolly_16_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
 
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/left/toys_goldie_18_left.mp4"
+            <source src="media/videos/robot/toys/left/toys_goldie_18_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -213,40 +213,40 @@
 
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/left/toys_dolly_15_left.mp4"
+            <source src="media/videos/robot/toys/left/toys_dolly_15_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/left/toys_goldie_16_left.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-
-        <div class="item">
-          <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/left/toys_brownie_18_left.mp4"
+            <source src="media/videos/robot/toys/left/toys_goldie_16_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
 
+        <div class="item">
+          <video poster="" autoplay muted loop height="100%">
+            <source src="media/videos/robot/toys/left/toys_brownie_18_left_comp.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+
 
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/left/toys_goldie_15_left.mp4"
+            <source src="media/videos/robot/toys/left/toys_goldie_15_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/left/toys_brownie_16_left.mp4"
+            <source src="media/videos/robot/toys/left/toys_brownie_16_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/left/toys_dolly_18_left.mp4"
+            <source src="media/videos/robot/toys/left/toys_dolly_18_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -265,38 +265,38 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/left/shoes_blundies_08_left.mp4"
+            <source src="media/videos/robot/shoes/left/shoes_blundies_08_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item"> 
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/left/shoes_nf_09_left.mp4"
+            <source src="media/videos/robot/shoes/left/shoes_nf_09_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/left/shoes_timbs_10_left.mp4"
+            <source src="media/videos/robot/shoes/left/shoes_timbs_10_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
 
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/left/shoes_blundies_09_left.mp4"
+            <source src="media/videos/robot/shoes/left/shoes_blundies_09_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/left/shoes_timbs_08_left.mp4"
+            <source src="media/videos/robot/shoes/left/shoes_timbs_08_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/left/shoes_nf_10_left.mp4"
+            <source src="media/videos/robot/shoes/left/shoes_nf_10_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -304,13 +304,13 @@
 
         <div class="item">
            <video poster="" autoplay muted loop height="100%">
-             <source src="media/videos/robot/shoes/left/shoes_nf_08_left.mp4"
+             <source src="media/videos/robot/shoes/left/shoes_nf_08_left_comp.mp4"
                      type="video/mp4">
            </video>
          </div>
          <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/left/shoes_blundies_10_left.mp4"
+            <source src="media/videos/robot/shoes/left/shoes_blundies_10_left_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -330,21 +330,21 @@
       <div id="results-carousel" class="carousel results-carousel">
         <!-- <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/right/toys_brownie_15_right.mp4"
+            <source src="media/videos/robot/toys/right/toys_brownie_15_right_comp.mp4"
                     type="video/mp4">
           </video>
         </div> -->
 
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/right/toys_dolly_16_right.mp4"
+            <source src="media/videos/robot/toys/right/toys_dolly_16_right_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
 
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/right/toys_goldie_18_right.mp4"
+            <source src="media/videos/robot/toys/right/toys_goldie_18_right_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -354,40 +354,40 @@
 
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/right/toys_dolly_15_right.mp4"
+            <source src="media/videos/robot/toys/right/toys_dolly_15_right_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/right/toys_goldie_16_right.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-
-        <div class="item">
-          <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/right/toys_brownie_18_right.mp4"
+            <source src="media/videos/robot/toys/right/toys_goldie_16_right_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
 
+        <div class="item">
+          <video poster="" autoplay muted loop height="100%">
+            <source src="media/videos/robot/toys/right/toys_brownie_18_right_comp.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+
 
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/right/toys_goldie_15_right.mp4"
+            <source src="media/videos/robot/toys/right/toys_goldie_15_right_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/right/toys_brownie_16_right.mp4"
+            <source src="media/videos/robot/toys/right/toys_brownie_16_right_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/toys/right/toys_dolly_18_right.mp4"
+            <source src="media/videos/robot/toys/right/toys_dolly_18_right_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -404,65 +404,63 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/right/shoes_blunds_08_right.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item"> 
-          <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/right/shoes_nf_09_right.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item">
-          <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/right/shoes_<footer class="footer">
-              <div class="container">
-                <div class="columns is-centered">
-                  <div class="column">
-                    <div class="content has-text-centered">
-                      <p>
-                        Website template borrowed from <a href="https://github.com/nerfies/nerfies.github.io">NeRFies</a> and <a href="https://peract.github.io/">PerAct</a>. 
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </footer>
-        </div>
-        <div class="item">
-          <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/right/shoes_timbs_08_right.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item">
-          <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/right/shoes_nf_10_right.mp4"
+            <source src="media/videos/robot/shoes/right/shoes_timbs_10_right_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
 
 
         <div class="item">
-           <video poster="" autoplay muted loop height="100%">
-             <source src="media/videos/robot/shoes/right/shoes_nf_08_right.mp4"
-                     type="video/mp4">
-           </video>
-         </div>
-         <div class="item">
           <video poster="" autoplay muted loop height="100%">
-            <source src="media/videos/robot/shoes/right/shoes_timbs_09_right.mp4"
+            <source src="media/videos/robot/shoes/right/shoes_blunds_08_right_comp.mp4"
                     type="video/mp4">
           </video>
         </div>
+
+        <div class="item">
+          <video poster="" autoplay muted loop height="100%">
+            <source src="media/videos/robot/shoes/right/shoes_nf_09_right_comp.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+
+        <div class="item">
+          <video poster="" autoplay muted loop height="100%">
+            <source src="media/videos/robot/shoes/right/shoes_timbs_08_right_comp.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item">
+          <video poster="" autoplay muted loop height="100%">
+            <source src="media/videos/robot/shoes/right/shoes_nf_10_right_comp.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item">
+          <video poster="" autoplay muted loop height="100%">
+            <source src="media/videos/robot/shoes/right/shoes_blunds_09_right_comp.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item">
+          <video poster="" autoplay muted loop height="100%">
+            <source src="media/videos/robot/shoes/right/shoes_nf_08_right_comp.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item">
+          <video poster="" autoplay muted loop height="100%">
+            <source src="media/videos/robot/shoes/right/shoes_timbs_09_right_comp.mp4"
+                    type="video/mp4">
+          </video>
         </div>
       </div>
       <h2 class="subtitle has-text-centered">
         Grasping from the opening of the <b>right</b> <b>shoe</b>.
       </h2>
-    </div>
   </div>
+
+ 
 </section>
 
 
