update about page layout, c2g link, contact info

--- a/click2grasp/index.html
+++ b/click2grasp/index.html
@@ -141,14 +141,13 @@
 
     <!-- Code Link. -->
     <span class="link-block">
-      <a target="_blank" 
-         class="external-link button is-normal is-rounded is-dark" 
-         disabled>
+      <a href="https://github.com/tsagkas/click2grasp"
+         class="external-link button is-normal is-rounded is-dark">
         <span class="icon">
-          <i class="fab fa-github"></i>
+            <i class="fab fa-github"></i>
         </span>
         <span>Code</span>
-      </a>
+        </a>
     </span>
     </div>
   </div>
