update c2g iros acceptance

--- a/click2grasp/index.html
+++ b/click2grasp/index.html
@@ -345,10 +345,10 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-widescreen content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{tsagkas2024click,
+    <pre><code>@inproceedings{tsagkas2024click,
       title={Click to Grasp: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors},
       author={Tsagkas, Nikolaos and Rome, Jack and Ramamoorthy, Subramanian and Mac Aodha, Oisin and Lu, Chris Xiaoxuan},
-      journal={arXiv preprint arXiv:2403.14526},
+      journal={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
       year={2024}
     }</code></pre>
   </div>
