copy affgrasp page locally

--- a/click2grasp/index.html
+++ b/click2grasp/index.html
@@ -60,6 +60,9 @@
             More Research
           </a>
           <div class="navbar-dropdown">
+            <a class="navbar-item" target="_blank" href="https://tsagkas.github.io/affgrasp/">
+              AffGrasp
+            </a>
             <a class="navbar-item" href="https://tsagkas.github.io/vl-fields/">
               VL-Fields
             </a>
