--- a/vl-fields/index.html
+++ b/vl-fields/index.html
@@ -59,25 +59,19 @@
       </span>
       </a>
 
-      <!-- <div class="navbar-item has-dropdown is-hoverable">
+      <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
           More Research
         </a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="https://hypernerf.github.io">
-            HyperNeRF
+          <a class="navbar-item" target="_blank" href="https://tsagkas.github.io/affgrasp/">
+            AffGrasp
           </a>
-          <a class="navbar-item" href="https://nerfies.github.io">
-            Nerfies
-          </a>
-          <a class="navbar-item" href="https://latentfusion.github.io">
-            LatentFusion
-          </a>
-          <a class="navbar-item" href="https://photoshape.github.io">
-            PhotoShape
+          <a class="navbar-item" href="https://tsagkas.github.io/click2grasp/">
+            Click to Grasp
           </a>
         </div>
-      </div> -->
+      </div>
     </div>
 
   </div>
