add IROS acceptance in c2g page

--- a/click2grasp/index.html
+++ b/click2grasp/index.html
@@ -9,14 +9,14 @@
 
   <title>Click to Grasp</title>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FV4ZJ9PVSV"></script>  
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-FV4ZJ9PVSV"></script>  
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'G-FV4ZJ9PVSV');
-  </script>
+  </script> -->
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -153,6 +153,15 @@
         </a>
     </span>
     </div>
+
+    <div class="is-size-5 publication-authors">
+      <span class="author-block"> <mark><b>Oral Pitch + Poster</b>:</mark>
+        
+        IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2024) [<a href="https://iros2024-abudhabi.org/">link</a>]</span>
+      <!-- <span class="author-block"><sup>2</sup>Google Research</span> -->
+    </div>
+
+
   </div>
 </div>
 </div>
