add arxiv for pvrobo

--- a/pvrobo/index.html
+++ b/pvrobo/index.html
@@ -421,17 +421,18 @@ Our experiments demonstrate significant performance improvements, particularly i
   </div>
 </div>
 
-<!-- <section class="section" id="BibTeX">
+
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@inproceedings{tsagkas2024click,
-      title={Click to Grasp: Zero-Shot Precise Manipulation via Visual Diffusion Descriptors},
-      author={Tsagkas, Nikolaos and Rome, Jack and Ramamoorthy, Subramanian and Mac Aodha, Oisin and Lu, Chris Xiaoxuan},
-      journal={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
-      year={2024}
-    }</code></pre>
+    <pre><code>@article{tsagkas2025pretrainedvisualrepresentationsfall,
+      title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning}, 
+      author={Nikolaos Tsagkas and Andreas Sochopoulos and Duolikun Danier and Chris Xiaoxuan Lu and Oisin Mac Aodha},
+      journal = {arxiv preprint arXiv:2502.03270},
+      year={2025},
+}</code></pre>
   </div>
-</section> -->
+</section>
 
 
 </body>
