add pvrobo links

--- a/affgrasp/index.html
+++ b/affgrasp/index.html
@@ -50,6 +50,9 @@
           More Research
         </a>
         <div class="navbar-dropdown">
+          <a class="navbar-item" target="_blank" href="https://tsagkas.github.io/pvrobo/">
+            PVRobo
+          </a>
           <a class="navbar-item" target="_blank" href="https://tsagkas.github.io/click2grasp/">
             Click to Grasp
           </a>
@@ -118,15 +121,15 @@
             </span>
 
             <!-- Video Link. -->
-            <!-- <span class="link-block">
-              <a target="_blank" href="https://www.youtube.com/watch?v=TB0g52N-3_Y"
+            <span class="link-block">
+              <a target="_blank" href="https://www.youtube.com/watch?v=zEXrEH3I3Pc"
                  class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                     <i class="fab fa-youtube"></i>
                 </span>
                 <span>Video</span>
               </a>
-            </span> -->
+            </span>
 
             <!-- Talk Link. -->
             <!-- <span class="link-block">
