--- a/pvrobo/index.html
+++ b/pvrobo/index.html
@@ -103,9 +103,8 @@
     <div class="publication-links">
       <!-- PDF Link. -->
       <span class="link-block">
-        <a target="_blank"
-           class="external-link button is-normal is-rounded is-dark"
-           disabled>
+        <a target="_blank" href="https://arxiv.org/pdf/2502.03270"
+           class="external-link button is-normal is-rounded is-dark">
           <span class="icon">
               <i class="fas fa-file-pdf"></i>
           </span>
@@ -115,9 +114,8 @@
 
     <!-- Arxiv Link. -->
     <span class="link-block">
-      <a target="_blank"
-         class="external-link button is-normal is-rounded is-dark"
-         disabled>
+      <a target="_blank" href="https://arxiv.org/abs/2502.03270"
+         class="external-link button is-normal is-rounded is-dark">
         <span class="icon">
             <i class="fas fa-file"></i>
         </span>
@@ -125,21 +123,9 @@
       </a>
     </span>
 
-    <!-- Video Link. href="https://tsagkas.github.io/click2grasp/" -->
-    <span class="link-block">
-      <a target="_blank" 
-         class="external-link button is-normal is-rounded is-dark"
-         disabled>
-        <span class="icon">
-            <i class="fab fa-youtube"></i>
-        </span>
-        <span>Video</span>
-      </a>
-    </span>
-
     <!-- Code Link. -->
     <span class="link-block">
-      <a target="_blank" disabled
+      <a target="_blank" href="https://github.com/tsagkas/pvrobo"
          class="external-link button is-normal is-rounded is-dark">
         <span class="icon">
             <i class="fab fa-github"></i>
@@ -428,7 +414,7 @@ Our experiments demonstrate significant performance improvements, particularly i
     <pre><code>@article{tsagkas2025pretrainedvisualrepresentationsfall,
       title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning}, 
       author={Nikolaos Tsagkas and Andreas Sochopoulos and Duolikun Danier and Chris Xiaoxuan Lu and Oisin Mac Aodha},
-      journal = {arxiv preprint arXiv:2502.03270},
+      journal={arxiv preprint arXiv:2502.03270},
       year={2025},
 }</code></pre>
   </div>
