--- a/vl-fields/index.html
+++ b/vl-fields/index.html
@@ -64,6 +64,9 @@
           More Research
         </a>
         <div class="navbar-dropdown">
+          <a class="navbar-item" target="_blank" href="https://tsagkas.github.io/pvrobo/">
+            PVRobo
+          </a>
           <a class="navbar-item" target="_blank" href="https://tsagkas.github.io/affgrasp/">
             AffGrasp
           </a>
