--- a/click2grasp/index.html
+++ b/click2grasp/index.html
@@ -60,6 +60,9 @@
             More Research
           </a>
           <div class="navbar-dropdown">
+            <a class="navbar-item" target="_blank" href="https://tsagkas.github.io/pvrobo/">
+              PVRobo
+            </a>
             <a class="navbar-item" target="_blank" href="https://tsagkas.github.io/affgrasp/">
               AffGrasp
             </a>
