remove hover functionality

--- a/pvrobo/index.html
+++ b/pvrobo/index.html
@@ -114,7 +114,7 @@
 
     <!-- Arxiv Link. -->
     <span class="link-block">
-      <a target="_blank" href="https://arxiv.org/abs/2502.03270"
+      <a target="_blank"  href="https://arxiv.org/abs/2502.03270"
          class="external-link button is-normal is-rounded is-dark">
         <span class="icon">
             <i class="fas fa-file"></i>
@@ -123,9 +123,21 @@
       </a>
     </span>
 
+    <!-- Video Link. href="https://tsagkas.github.io/click2grasp/" -->
+    <!-- <span class="link-block">
+      <a target="_blank" 
+         class="external-link button is-normal is-rounded is-dark"
+         disabled>
+        <span class="icon">
+            <i class="fab fa-youtube"></i>
+        </span>
+        <span>Video</span>
+      </a>
+    </span> -->
+
     <!-- Code Link. -->
     <span class="link-block">
-      <a target="_blank" href="https://github.com/tsagkas/pvrobo"
+      <a target="_blank"  href="https://github.com/tsagkas/pvrobo"
          class="external-link button is-normal is-rounded is-dark">
         <span class="icon">
             <i class="fab fa-github"></i>
