--- a/pvrobo/index.html
+++ b/pvrobo/index.html
@@ -239,7 +239,7 @@ Our experiments demonstrate significant performance improvements, particularly i
 
 
 <section class="section">
-  <section class="section">
+  <!-- <section class="section"> -->
     <div class="container is-max-desktop">
       <!-- Abstract. -->
       <div class="columns is-centered has-text-centered">
