add pvrobo code

--- a/pvrobo/index.html
+++ b/pvrobo/index.html
@@ -72,7 +72,7 @@
                                     <li><a href="#sim_eval" target="_self">AFA Evaluation</a></li>
                                     <li><a href="#sim_heatmaps" target="_self">Interpreting AFA</a></li>
                                 </ul>
-                            
+                                <li><a href="#cite" target="_self">BibTeX</a></li>
                             </ul>
                         </aside>
                     </div>
@@ -112,11 +112,11 @@
                             <span>arXiv</span>
                         </a>
 
-                        <a class="button is-size-5 mr-1 mt-2" disabled>
+                        <a href="https://github.com/tsagkas/pvrobo" class="button is-size-5 mr-1 mt-2">
                             <span class="icon">
                                 <i class="fas fa-code"></i>
                             </span>
-                            <span>Code (coming soon)</span>
+                            <span>Code</span>
                         </a>
                     </div>
                 </div>
@@ -902,13 +902,14 @@
 
 
                 <!-- Citation section -->
-                <h3 class="title is-3">Citation</h3>
+                <h3 id="cite" class="title is-3">Citation</h3>
                 <div class="is-relative">
                     <pre class="textarea is-family-code" readonly id="citation-text">@article{tsagkas2025pretrainedvisualrepresentationsfall,
     title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning},
-    author={Nikolaos Tsagkas and Andreas Sochopoulos and Duolikun Danier and Chris Xiaoxuan Lu and Oisin Mac Aodha},
+    author={Tsagkas, Nikolaos and Sochopoulos, Andreas and Danier, Duolikun and Vijayakumar, Sethu and Xiaoxuan Lu, Chris and Mac Aodha, Oisin},
     journal={arXiv preprint arXiv:2502.03270},
     year={2025},
+                  
     }</pre>
                     <button id="citation-copy-button" class="button is-small" onclick="copyCitation()">
                         <span class="icon">
