add eai acceptance

--- a/pvrobo/index.html
+++ b/pvrobo/index.html
@@ -102,9 +102,15 @@
                             <span class="icon">
                                 <i class="fas fa-file-pdf"></i>
                             </span>
-                            <span>Paper</span>
+                            <span>Full Paper</span>
                         </a>
 
+                        <a href="../pvrobo/assets/pdfs/WCVPR_2025.pdf" class="button is-size-5 mr-1 mt-2">
+                            <span class="icon">
+                                <i class="fas fa-file-pdf"></i>
+                            </span>
+                            <span>WCVPR Paper</span>
+                        </a>
                         <a href="https://arxiv.org/abs/2502.03270" class="button is-size-5 mr-1 mt-2">
                             <span class="icon">
                                 <i class="ai ai-arxiv"></i>
@@ -120,7 +126,11 @@
                         </a>
                     </div>
                 </div>
-    
+              <div class="notification is-info is-light mt-5 mb-4" style="background-color: var(--card-background); border-left: 4px solid #3273dc; padding: 1rem;">
+                <p style="font-size: 1rem; color: var(--text);">
+                    <strong>Update:</strong> A short version of this paper has been accepted for <mark style="background-color: #FBB5FF;"><strong>oral and poster presentation</strong></mark> at the <a href="https://embodied-ai.org/cvpr2025/" target="_blank">Embodied AI Workshop</a> at CVPR 2025. See you in Nashville, Tennessee! 👋 
+                </p>
+              </div>
 
                 <h2 id="abstract" class="title is-4 mb-2">Abstract</h2>
                 <p style="font-size: 0.95em">
@@ -902,7 +912,7 @@
 
 
                 <!-- Citation section -->
-                <h3 id="cite" class="title is-3">Citation</h3>
+                <h3 id="cite" class="title is-3">BibTex</h3>
                 <div class="is-relative">
                     <pre class="textarea is-family-code" readonly id="citation-text">@article{tsagkas2025pretrainedvisualrepresentationsfall,
     title={When Pre-trained Visual Representations Fall Short: Limitations in Visuo-Motor Robot Learning},
@@ -932,7 +942,7 @@
                     </div>
                     <div class="level-right">
                         <div class="level-item">
-                            <p class="has-text-weight-light">Updated April 2025</p>
+                            <p class="has-text-weight-light">Updated June 2025</p>
                         </div>
                     </div>
                 </div>
