--- a/pvrobo/index.html
+++ b/pvrobo/index.html
@@ -109,7 +109,13 @@
                             <span class="icon">
                                 <i class="fas fa-file-pdf"></i>
                             </span>
-                            <span>WCVPR Paper</span>
+                            <span>EAI@CVPR-25 Paper</span>
+                        </a>
+                        <a href="../pvrobo/assets/pdfs/EAI@CVPR25-poster.pdf" class="button is-size-5 mr-1 mt-2">
+                            <span class="icon">
+                                <i class="fas fa-file-pdf"></i>
+                            </span>
+                            <span>EAI@CVPR-25 Poster</span>
                         </a>
                         <a href="https://arxiv.org/abs/2502.03270" class="button is-size-5 mr-1 mt-2">
                             <span class="icon">
@@ -128,7 +134,7 @@
                 </div>
               <div class="notification is-info is-light mt-5 mb-4" style="background-color: var(--card-background); border-left: 4px solid #3273dc; padding: 1rem;">
                 <p style="font-size: 1rem; color: var(--text);">
-                    <strong>Update:</strong> A short version of this paper has been accepted for <mark style="background-color: #FBB5FF;"><strong>oral and poster presentation</strong></mark> at the <a href="https://embodied-ai.org/cvpr2025/" target="_blank">Embodied AI Workshop</a> at CVPR 2025. See you in Nashville, Tennessee! 👋 
+                    <strong>Update:</strong> A short version of this paper has been accepted for <mark style="background-color: #FBB5FF;"><strong>oral and poster presentation</strong></mark> at the <a href="https://embodied-ai.org/cvpr2025/" target="_blank">6th Embodied AI Workshop</a> at CVPR 2025. See you in Nashville, Tennessee! 👋 
                 </p>
               </div>
 
