--- a/affgrasp/index.html
+++ b/affgrasp/index.html
@@ -95,6 +95,10 @@
             <span class="author-block"><sup>1</sup>University of Edinbugh,</span>
             <span class="author-block"><sup>2</sup>Huawei Noah’s Ark Lab</span>
           </div>
+          
+          <div class="is-size-5 publication-authors">
+            <span class="author-block"><i>IEEE/CVF International Conference on Computer Vision (ICCV), Hawaii, USA, 2025</i></span>
+          </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
